<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create">Create</string>
    <string name="instructions">Instructions</string>
    <string name="add_shoe">Add shoe</string>
    <string name="shoes">Shoes</string>
    <string name="welcome">Welcome</string>
    <string name="save">Save</string>
    <string name="shoe_name">Shoe name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="description">Description</string>
    <string name="welcome_description">This is a friendly welcome description.</string>
    <string name="instructions_description">"I've added 3 shoes to the Shoe Store. You can add more by tapping the Add button and filling out all details about a new shoe. "</string>
    <string name="log_out">Log out</string>
</resources>
